--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Wp</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -14,7 +16,16 @@
             <div class="logo"></div>
           </a>
           <nav>
-
+            <ul>
+              <li>
+                <a href="#">FEATURES</a>
+              </li>
+              <li><a href="#">EDITORIALS</a></li>
+              <li><a href="#">ENVIRONMENT</a></li>
+              <li><a href="#">BLOG</a></li>
+              <li><a href="#">SHOP</a></li>
+              <li><a href="#">CONTACT</a></li>
+              </ul>
           </nav>
 
 
