Change img logo e inizio banner
Fix immagine logo e inizio banner

--- a/index.html
+++ b/index.html
@@ -12,27 +12,30 @@
     <div class="wrapper">
       <!-- intestazione -->
       <header>
+        <div >
           <a href="#">
-            <div class="logo"></div>
+            <img src="img/logo.png" alt="logo">
           </a>
+        </div>
           <nav>
             <ul>
-              <li>
-                <a href="#">FEATURES</a>
-              </li>
+              <li><a href="#">FEATURES</a></li>
               <li><a href="#">EDITORIALS</a></li>
               <li><a href="#">ENVIRONMENT</a></li>
               <li><a href="#">BLOG</a></li>
               <li><a href="#">SHOP</a></li>
               <li><a href="#">CONTACT</a></li>
-              </ul>
+            </ul>
           </nav>
-
-
       </header>
       <!-- end intestazione -->
       <!-- inizio hero -->
-      <div class="hero"></div>
+      <div class="hero">
+
+
+
+
+      </div>
       <!-- end inizio hero -->
       <!-- sezione centrale -->
       <section >
