--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!-- end intestazione -->
       <!-- inizio hero -->
       <div class="hero">
-
+        <div class="overlay"></div>
 
 
 
