--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
       <!-- end intestazione -->
       <!-- inizio hero -->
       <div class="hero">
-        <div class="overlay"></div>
+        <div class="testo-hero">
+          <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse.</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna ...</p>
+        </div>
 
+
+        <div class="overlay"></div>
 
 
       </div>
