Titolo section + colonne + hover

--- a/index.html
+++ b/index.html
@@ -35,21 +35,37 @@
           <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse.</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna ...</p>
         </div>
-
-
         <div class="overlay"></div>
-
-
       </div>
       <!-- end inizio hero -->
       <!-- sezione centrale -->
       <section >
-        <div class="box-titolo"></div>
-        <div class="row clearfix">
-          <div class="col-left"></div>
-          <div class="col-center"></div>
-          <div class="col-right"></div>
+        <div class="box-titolo">
+          <h1>Leadership</h1>
+          <p>Lorem ipsum dolor sit amet</p>
         </div>
+        <div class="row clearfix">
+          <div class="col-left">
+            <div class="img-left">
+              <div class="overlay-2"></div>
+            </div>
+
+
+            <h4>Lorem</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="col-center">
+            <div class="img-center"></div>
+            <h4>Lorem</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="col-right">
+            <div class="img-right"></div>
+            <h4>Lorem</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+        </div>
+
       </section>
       <!-- sezione centrale -->
       <footer></footer>
