--- a/index.html
+++ b/index.html
@@ -49,18 +49,21 @@
             <div class="img-left">
               <div class="overlay-2"></div>
             </div>
-
-
             <h4>Lorem</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
           <div class="col-center">
-            <div class="img-center"></div>
+            <div class="img-center">
+              <div class="overlay-2"></div>
+            </div>
             <h4>Lorem</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
           <div class="col-right">
-            <div class="img-right"></div>
+            <div class="img-right">
+              <div class="overlay-2"></div>
+            </div>
+
             <h4>Lorem</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
