--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
             <div class="img-right">
               <div class="overlay-2"></div>
             </div>
-
             <h4>Lorem</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
-
       </section>
       <!-- sezione centrale -->
-      <footer></footer>
+      <footer>
+        <p>Designed with <span>&hearts;</span></p>
+      </footer>
     </div>
     <!-- end contenitore principale -->
   </body>
