--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
         </div>
       </section>
       <!-- sezione centrale -->
+      <!-- footer -->
       <footer>
         <p>Designed with <span>&hearts;</span></p>
       </footer>
+      <!-- / footer -->      
     </div>
-    <!-- end contenitore principale -->
+    <!-- /contenitore principale -->
   </body>
 </html>
